--- a/dev/sass/_footer.scss
+++ b/dev/sass/_footer.scss
@@ -11,6 +11,7 @@ footer{
       color: #587995;
       @include transition(all, 0.5s, ease);
       display: block;
+      font-weight:300;
     }
 
     a:hover{
