--- a/dev/stylesheets/main.css
+++ b/dev/stylesheets/main.css
@@ -323,7 +323,7 @@ a {
   margin-left: 15px;
   display: block;
   vertical-align: middle;
-  background: url('../images/linkfire_logo_w_text.svg?1405070271');
+  background: url('../images/linkfire_logo_w_text.svg?1405004886');
   -webkit-background-size: contain;
   -moz-background-size: contain;
   -o-background-size: contain;
@@ -390,8 +390,9 @@ footer .row span, footer .row a {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   display: block;
+  font-weight: 300;
 }
-/* line 16, ../sass/_footer.scss */
+/* line 17, ../sass/_footer.scss */
 footer .row a:hover {
   color: #587995;
   text-decoration: underline;
@@ -401,7 +402,7 @@ footer .row a:hover {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-/* line 22, ../sass/_footer.scss */
+/* line 23, ../sass/_footer.scss */
 footer .row img {
   margin-top: 20px;
   display: block;
@@ -552,7 +553,7 @@ small {
 
 /* line 1, ../sass/_landing.scss */
 #landing {
-  background: url('../images/bg1.jpg?1405070271');
+  background: url('../images/bg1.jpg?1404992485');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -592,38 +593,26 @@ small {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding: 5% 0 5% 0;
+  padding-top: 5%;
+  padding-bottom: 5%;
   width: 100%;
   height: 100%;
   background-position: center;
   color: #000;
 }
-/* line 11, ../sass/_features.scss */
+/* line 12, ../sass/_features.scss */
 #features .row h4 {
   margin-top: 0px;
   text-transform: uppercase;
 }
-/* line 16, ../sass/_features.scss */
+/* line 17, ../sass/_features.scss */
 #features .row .image {
   height: 500px;
 }
-/* line 19, ../sass/_features.scss */
+/* line 20, ../sass/_features.scss */
 #features .row .image img {
   height: 500px;
-}
-
-/* line 27, ../sass/_features.scss */
-.feat-content {
-  padding: 10% 0 15% 0;
-}
-
-/* line 31, ../sass/_features.scss */
-.cn {
-  padding: 5% 0 15% 0;
-}
-
-/* line 34, ../sass/_features.scss */
-.feat-img {
+  padding: 5% 0;
   margin: 0 auto 0 auto;
 }
 
@@ -672,7 +661,7 @@ small {
 
 /* line 10, ../sass/_splitters.scss */
 #splitter {
-  background: url('../images/bg-splitter1.jpg?1405070271');
+  background: url('../images/bg-splitter1.jpg?1404992485');
 }
 /* line 13, ../sass/_splitters.scss */
 #splitter .row {
@@ -682,7 +671,7 @@ small {
 
 /* line 20, ../sass/_splitters.scss */
 #splitter2 {
-  background: url('../images/bg-splitter2.jpg?1405070271');
+  background: url('../images/bg-splitter2.jpg?1404992485');
 }
 /* line 23, ../sass/_splitters.scss */
 #splitter2 .row {
@@ -692,7 +681,7 @@ small {
 
 /* line 29, ../sass/_splitters.scss */
 #splitter3 {
-  background: url('../images/bg-splitter3.jpg?1405070271');
+  background: url('../images/bg-splitter3.jpg?1404992485');
 }
 /* line 33, ../sass/_splitters.scss */
 #splitter3 .row {
@@ -898,14 +887,15 @@ body {
 /* line 32, ../sass/main.scss */
 .container-fluid {
   padding: 0 5% 0 5%;
+  overflow: hidden;
 }
 
-/* line 36, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 p, span {
   color: whitesmoke;
 }
 
-/* line 40, ../sass/main.scss */
+/* line 41, ../sass/main.scss */
 .bg-prefs, #splitter, #splitter2, #splitter3, #insights {
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -917,32 +907,32 @@ p, span {
   color: #000;
 }
 
-/* line 48, ../sass/main.scss */
+/* line 49, ../sass/main.scss */
 #logo-banner {
   background-color: #f0f1f3;
 }
 
-/* line 53, ../sass/main.scss */
+/* line 54, ../sass/main.scss */
 #press {
-  background: url('../images/bg-testimonial.jpg?1405070271');
+  background: url('../images/bg-testimonial.jpg?1404992485');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 56, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 #press .testimonial {
   padding: 30px;
 }
-/* line 59, ../sass/main.scss */
+/* line 60, ../sass/main.scss */
 #press .testimonial .row .icon-quotes-left {
   font-size: 40px;
 }
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 #press .testimonial .row div {
   text-align: center;
 }
-/* line 66, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
 #press .testimonial .row h3 {
   color: white;
   font-size: 23px;
@@ -950,16 +940,16 @@ p, span {
   font-family: 'Roboto', sans-serif;
   font-style: italic;
 }
-/* line 75, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 #press .row {
   margin-bottom: 2%;
   margin-top: 2%;
 }
-/* line 82, ../sass/main.scss */
+/* line 83, ../sass/main.scss */
 #press .presslogos div {
   opacity: 0.5;
 }
-/* line 85, ../sass/main.scss */
+/* line 86, ../sass/main.scss */
 #press .presslogos div.current {
   opacity: 1;
   -webkit-transition: all 0.5s ease;
@@ -969,17 +959,17 @@ p, span {
   transition: all 0.5s ease;
 }
 
-/* line 93, ../sass/main.scss */
+/* line 94, ../sass/main.scss */
 .valign {
   padding: 10% 0;
 }
 
-/* line 96, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .feat-img {
   margin: 0 auto 0 auto;
 }
 
-/* line 103, ../sass/main.scss */
+/* line 104, ../sass/main.scss */
 .info-box h1 {
   font-size: 40px;
   text-transform: uppercase;
@@ -988,14 +978,14 @@ p, span {
   padding: 0;
   font-weight: 700;
 }
-/* line 111, ../sass/main.scss */
+/* line 112, ../sass/main.scss */
 .info-box p {
   color: #999999;
   font-size: 16px;
   line-height: 1.7em;
 }
 
-/* line 120, ../sass/main.scss */
+/* line 121, ../sass/main.scss */
 .shufflebox {
   height: 105px;
   margin-top: 10px;
@@ -1010,12 +1000,12 @@ p, span {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-/* line 127, ../sass/main.scss */
+/* line 128, ../sass/main.scss */
 .shufflebox .content {
   padding: 0 20px 0 20px;
   margin: 0;
 }
-/* line 132, ../sass/main.scss */
+/* line 133, ../sass/main.scss */
 .shufflebox h2 {
   color: #292f38;
   text-transform: uppercase;
@@ -1024,20 +1014,20 @@ p, span {
   padding: 0;
   margin: 0;
 }
-/* line 140, ../sass/main.scss */
+/* line 141, ../sass/main.scss */
 .shufflebox p {
   padding: 0;
   margin: 0;
   color: #999999;
 }
-/* line 145, ../sass/main.scss */
+/* line 146, ../sass/main.scss */
 .shufflebox h4 {
   margin-top: 0px;
   text-transform: uppercase;
   color: black;
 }
 
-/* line 152, ../sass/main.scss */
+/* line 153, ../sass/main.scss */
 .circ {
   position: relative;
   top: 50%;
@@ -1049,13 +1039,13 @@ p, span {
   float: left;
   border-radius: 25px;
 }
-/* line 163, ../sass/main.scss */
+/* line 164, ../sass/main.scss */
 .circ [class^="icon-"] {
   line-height: 50px;
   font-size: 140%;
 }
 
-/* line 169, ../sass/main.scss */
+/* line 170, ../sass/main.scss */
 .arrow {
   top: 50%;
   margin-top: -10px;
@@ -1074,7 +1064,7 @@ p, span {
   border-right-color: #dddfe1;
 }
 
-/* line 183, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
 .right {
   right: -20px;
   left: inherit;
@@ -1082,7 +1072,7 @@ p, span {
   border-left-color: #dddfe1;
 }
 
-/* line 190, ../sass/main.scss */
+/* line 191, ../sass/main.scss */
 .feat {
   display: inline-block;
   background-color: #dddfe1;
@@ -1093,7 +1083,7 @@ p, span {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-/* line 195, ../sass/main.scss */
+/* line 196, ../sass/main.scss */
 .feat .arrow {
   opacity: 1;
 }
